// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsList renders with default props 1`] = `
<ul
  className="ControlsList ControlsList_direction_vertical"
  data-lego="react"
>
  <Bem
    block="ControlsList"
    elem="item"
    key=".0"
    tag="li"
  >
    один
  </Bem>
  <Bem
    block="ControlsList"
    elem="item"
    key=".1"
    tag="li"
  >
    два
  </Bem>
</ul>
`;

exports[`ControlsList renders with direction=horizontal prop 1`] = `
<ul
  className="ControlsList ControlsList_direction_horizontal"
  data-lego="react"
>
  <Bem
    block="ControlsList"
    elem="item"
    key=".0"
    tag="li"
  >
    один
  </Bem>
  <Bem
    block="ControlsList"
    elem="item"
    key=".1"
    tag="li"
  >
    два
  </Bem>
</ul>
`;

exports[`ControlsList renders with direction=vertical prop 1`] = `
<ul
  className="ControlsList ControlsList_direction_vertical"
  data-lego="react"
>
  <Bem
    block="ControlsList"
    elem="item"
    key=".0"
    tag="li"
  >
    один
  </Bem>
  <Bem
    block="ControlsList"
    elem="item"
    key=".1"
    tag="li"
  >
    два
  </Bem>
</ul>
`;

exports[`ControlsList renders with incoming className 1`] = `
<ul
  className="ControlsList ControlsList_direction_vertical className"
  data-lego="react"
>
  <Bem
    block="ControlsList"
    elem="item"
    key=".0"
    tag="li"
  >
    раз
  </Bem>
</ul>
`;
